<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter search term</string>
    <string name="search_button_text">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_setting">Settings</string>
    <string name="btn_save">SAVE</string>
    <string name="prompt_size">Image Size</string>
    <string name="prompt_color">Color Filter</string>
    <string name="prompt_type">Image Type</string>
    <string name="prompt_site">Site Filter</string>
    <string name="site_hint">Search within site</string>
    <string name="bt_more">More</string>
    

</resources>
