<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/query_hint" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etQuery"
        android:layout_alignParentRight="true"
        android:text="@string/search_button_text" 
        android:onClick="onImageSearch"/>

    <GridView
        android:id="@+id/gvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etQuery"
        android:layout_below="@+id/etQuery"
        android:numColumns="3" >
    </GridView>

    <Button
        android:id="@+id/bt_more"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
		android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="onLoadMore"
        android:layout_alignParentBottom="true" 
        android:text="@string/bt_more" />

</RelativeLayout>
